Integrate MySQL in Docker dev env

--- a/viikkoharkat/weather-app/backend/package.json
+++ b/viikkoharkat/weather-app/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "babel-node src/index.js"
@@ -17,5 +16,6 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0"
-  }
+  },
+  "description": ""
 }
