--- a/viikkoharkat/weather-app/docker-compose.yml
+++ b/viikkoharkat/weather-app/docker-compose.yml
@@ -11,6 +11,16 @@ services:
     volumes:
       - ./backend:/opt/app
     restart: always
+
+  frontend:
+    build:
+      context: ./
+      dockerfile: .dockerfiles/FrontendDev
+    ports:
+      - "9002:80"
+    volumes:
+      - ./frontend:/opt/app
+    restart: always
   db:
     image: mysql:8.0.3
     volumes:
