--- a/viikkoharkat/weather-app/backend/package.json
+++ b/viikkoharkat/weather-app/backend/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "babel-node src/index.js"
+    "dev": "nodemon src/index.js -w src --exec babel-node",
+    "lint:prettier": "npx prettier -- check 'src/**/*.js'",
+    "test": "npm run lint: prettier",
+    "test:watch": "nodemon -w src --exec 'npm test'",
+    "start": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
